--- a/hsv/package.json
+++ b/hsv/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue1",
+  "name": "hsv",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "dequista",
+  "author": "yoongyu-hwang <dotheji11@naver.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
